(+ user visible changes, * internal stuff)

Changes since PyInstaller 1.5
-----------------------------
 + Added Multipackage function to create a collection of packages to avoid
   library duplication. See documentation for more details.
 + New symplified command line interface. Configure.py/Makespec.py/Build.py
   replaced by pyinstaller.py. See documentation for more details.
 + Add experimental support for Mac OSX 64-bit
 + Removed cross-building/bundling feature which was never really finished.

Changes since PyInstaller 1.4
-----------------------------
 + Full support for Python 2.7.
 + Full support for Python 2.6 on Windows. No manual redistribution
   of DLLs, CRT, manifest, etc. is required: PyInstaller is able to
   bundle all required dependencies (thanks to Florian Hoech).
 + Added support for Windows 64-bit (thanks to Martin Zibricky).
 + Added binary bootloaders for Linux (32-bit and 64-bit, using LSB),
   and Darwin (32-bit). This means that PyInstaller users on this
   platform don't need to compile the bootloader themselves anymore
   (thanks to Martin Zibricky and Lorenzo Mancini).
 * Rewritten the build system for the bootloader using waf (thanks
   to Martin Zibricky)
 * Correctly detect Python unified binary under Mac OSX, and bail out
   if the unsupported 64-bit version is used (thanks to Nathan Weston).
 * Fix TkInter support under Mac OSX (thanks to Lorenzo Mancini).
 * Improve bundle creation under Mac OSX and correctly support also
   one-dir builds within bundles (thanks to Lorenzo Mancini).
 * Fix spurious KeyError when using dbhash
 * Fix import of nested packages made from Pyrex-generated files.
 * PyInstaller is now able to follow dependencies of binary extensions
   (.pyd/.so) compressed within .egg-files.
 + Add import hook for PyTables.
 + Add missing import hook for QtWebKit.
 + Add import hook for pywinauto.
 + Add import hook for reportlab (thanks Nevar).
 * Improve matplotlib import hook (for Mac OSX).