@@ -3,7 +3,8 @@ import sys
 from ctypes import *
 
 def dummy(arg):
-    if sys.platform == "linux2":
+    if sys.platform == "linux2" or sys.platform.startswith('sun') or \
+        sys.platform.startswith('aix'):
         tct = CDLL("ctypes/testctypes.so")
     elif sys.platform[:6] == "darwin":
         tct = CDLL("ctypes/testctypes.dylib")
